--- a/index.html
+++ b/index.html
@@ -259,13 +259,11 @@
             <h3>Consultantes</h3>
             <div id="carousel-container">
                 <div id="carousel">
-                    <div class="carousel-item"><img src="./img/centaura.png" alt="Imagen 1"></div>
-                    <div class="carousel-item"><img src="./img/fototarot2.jpg" alt="Imagen 2"></div>
-                    <div class="carousel-item"><img src="./img/fototarot1.jpg" alt="Imagen 3"></div>
-                    <div class="carousel-item"><img src="./img/fototarot3.jpg" alt="Imagen 4"></div>
-                    <div class="carousel-item"><img src="./img/fototarot2.jpg" alt="Imagen 5"></div>
-                    <div class="carousel-item"><img src="./img/fototarot1.jpg" alt="Imagen 6"></div>
-                    <div class="carousel-item"><img src="./img/fototarot3.jpg" alt="Imagen 7"></div>
+                    <div class="carousel-item"><img src="./img/consultante1.jpeg" alt="Imagen 1"></div>
+                    <div class="carousel-item"><img src="./img/consultante2.jpeg" alt="Imagen 2"></div>
+                    <div class="carousel-item"><img src="./img/consultante3.jpeg" alt="Imagen 3"></div>
+                    <div class="carousel-item"><img src="./img/consultante4.jpeg" alt="Imagen 4"></div>
+                    <div class="carousel-item"><img src="./img/consultante5.jpeg" alt="Imagen 5"></div>
                     <!-- Agrega más imágenes según sea necesario -->
                 </div>
             </div>
