se modifico texto

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 <h3 class="titulo-seccion">POR QUE ELEGI ESTE CAMINO?</h3>
                 <p>ABRI ESTE ESPACIO PARA CONTAR TAN SOLO, UNA PEQUEÑA PARTE DE MIS EXPERIENCIAS EN EL PASO DE ESTA VIDA, PARA PODER HACER SENTIR ACOMPAÑADAS A TODAS LAS PERSONAS QUE ASI LO SIENTAN...</p>
                 <p class="especial2">
+                    <h4>
                 <p>TENGO CASI 33 AÑOS Y HACE UN POCO MAS DE 10 AÑOS COMENCE A BUSCAR LAS RESPUESTAS A MIS.. POR QUE? PARA QUE? DONDE? COMO? ..Y ALGO QUE ME CUOSTIONABA MUCHO ERA TAMBIEN, DE QUE ME SIRVE ESTA EXPERIENCIA? ..ESTA DESICION, ME HACE FELIZ?. ESAS PREGUNTAS NO ME DEJABAN DORMIR DE NOCHE, (SUFRI DE INSOMNIO MUCHO TIEMPO)..</p>
                 <p>TENIA UNA MALA RELACION CON LOS ALIMENTOS, ME SENTIA INSUFICIENTE, Y ESCUCHABA SOLAMENTE EL LADO OSCURO DE LA HISTORIA..</p>
                 <p>PASE POR SITUACIONES DE ABUSOS EN MI PRIMER INFANCIA, TENIA 4 AÑOS.. Y LA PESADILLA DURO HASTA LOS 6! EL ABUSADOR, FUE MI ABUELO.</p>
@@ -59,12 +60,13 @@
                 <p>HAGO ESTO PORQUE AMO HACERLO, ME LLENA EL CORAZON Y EL ALMA, AMO SABER QUE VIVIENDO DE LO QUE AMO HACER VIVO EN PLENITUD Y FELICIDAD, AMO PORQUE LAS RECOMPENZAS LLEGAN CUANDO ESTOY DISPUESTAS A RECIBIRLAS, AMO SABER QUE ESTOY AYUDANDO A QUIEN ESTA DEL OTRO LADO, PORQUE SI LEISTE HASTA ACA, CON ALGO REZONASTE!!..</p>
                 <p>TENGO MILES Y MILES DE MOTIVOS QUE ME LLEVARON HASTA ESTE LADO DE LA HISTORIA..</p>
                 <p>PERDONO DESDE LO MAS PROFUNDO DE MI CORAZON A QUIEN ME HIZO TANTO DAÑO, YA QUE ENTIENDO QUE TAMBIEN ERAN PERSONAS QUE YA VENIAN DESTRUIDAS EN SI MISMAS.</p>
-                <p>HONRO SIEMPRE LA VIDA DE MIS PADRES, QUIENES ME DIERON SIEMPRE LO MEJOR, DESDE SUS MUY ESCASOS RECURSOS Y APRENDIZAJES!
-                PERO SOBRE TODO, Y MAS IMPORTANTE.. </p>
+                <p>HONRO SIEMPRE LA VIDA DE MIS PADRES, QUIENES ME DIERON SIEMPRE LO MEJOR, DESDE SUS MUY ESCASOS RECURSOS Y APRENDIZAJES!</p>
+                <p>PERO SOBRE TODO, Y MAS IMPORTANTE.. </p>
     
-                <p>>HONRO LA VIDA QUE VIVO, CADA PEDAZO ES LO QUE ME HACE QUIEN SOY HOY, COMO SER HUMANO Y COMO MUJER!</p>
-                <p>HONRO EL TRABAJO, LA SALUD Y EL AMOR QUE COMPARTO CON MIS SERES QUERIDOS.
-                HORNO CADA PROCESO, PORQUE ASI ES PERFECTO!</p>
+                <p>HONRO LA VIDA QUE VIVO, CADA PEDAZO ES LO QUE ME HACE QUIEN SOY HOY, COMO SER HUMANO Y COMO MUJER!</p>
+                <p>HONRO EL TRABAJO, LA SALUD Y EL AMOR QUE COMPARTO CON MIS SERES QUERIDOS.</p>
+                <p>HORNO CADA PROCESO, PORQUE ASI ES PERFECTO!</p>
+                    </h4>
     
                 <h4>ESPERO QUE CON LO MUCHO O CON LO POCO QUE APRENDI, ESTE ESPACIO LES SIRVA PARA ENCONTRAR SU LUGAR SEGURO! (AL MENOS UN RATITO)
                 OJALA MI ACOMPAÑAMIENTO Y LAS TERAPIAS QUE OFRESCO, LES SIRVA Y LES AYUDE A TRANSITAR, SUPERAR O ROMPER POR LO QUE SEA QUE ESTEN PASANDO..
