cambios en formulario y consultantes

--- a/index.html
+++ b/index.html
@@ -83,16 +83,14 @@
     <!--SECCION SOBRE MI-->
     <section class="sobremi" id="habilidades">
         <div class="contenido-seccion">
-            <h2 class="titulo-seccion">Sobre Mis</h2>
-            <h3>Servicios</h3>
-
-            <p class="especial">Tarot holístico, predictivo 🧞
-                Reiki 🙌✨
-                Rito sagrado, sanación del útero 💖
-                Meditaciones guiadas 🧘🏻
-                Sesiones de acompañamiento en momentos de crisis 💫</p>
-            <p></p>
-
+            <h3 class="titulo-seccion">Sobre Mis Servicios</h3>
+            <div class="titulo-seccion-servicios">
+            <p class="especial">🧞Tarot holístico, predictivo </p>
+            <p class="especial">🙌Reiki</p>     
+            <p class="especial">✨Rito sagrado, sanación del útero</p>     
+            <p class="especial">💖Meditaciones guiadas</p>     
+            <p class="especial">🧘🏻Sesiones de acompañamiento en momentos de crisis 💫</p>
+            </div>
             <div class="fila">
                 <div class="col">
                     <i class="fa-solid fa-diamond"></i>
@@ -122,7 +120,7 @@
     <section class="resumen" id="resumen">
             <div class="container">
                 <h2>Formulario de Consulta</h2>
-                <form action="#" method="post">
+                <form action="#" method="POST">
                     <label for="nombre">Nombre:</label>
                     <input type="text" id="nombre" name="nombre" required>
             
