--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
                     <a href="#inicio">Inicio</a>
                     <a href="#sobremi">Mi Camino</a>
                     <a href="#habilidades">Servicios</a>
-                    <a href="#resumen">formulario</a>
-                    <a href="#resumen">Consultantes</a>
+                    <a href="#consultantes">Consultantes</a>
                     <a href="#contacto">Contacto</a>
                 </nav>
                 <div class="logo">
