cambios en todo

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <!--SECCION SOBRE MI-->
         <section class="sobremi" id="habilidades">
             <div class="contenido-seccion">
-                <h3 class="titulo-seccion">Sobre Mis Servicios</h3>
+                <h3 class="titulo-seccion">Mis Servicios</h3>
                 <div class="titulo-seccion-servicios">
                 <p class="especial">🧞Tarot holístico, predictivo </p>
                 <p class="especial">🙌Reiki</p>     
@@ -112,6 +112,26 @@
                         <p>Este rito parece estar centrado en la conexión con la energía femenina y la sanación del útero. Puede ser una práctica profunda y significativa para quienes buscan conectarse con su feminidad y explorar la sanación a un nivel más profundo.</p>
                     </div>
                 </div>
+            </div>
+        </section>
+
+
+        <!--GALERIA DE FOTOS-->
+        <section class="galeriaFondo">
+            
+        </section>
+
+        <section class="galeriaFotos">
+            <div class="galeria">
+                <div class="pareja">
+                    <img src="./img/imgTarot7.avif" alt="Imagen 1">
+                    <img src="./img/imgTarot7.avif" alt="Imagen 2">
+                </div>
+                <div class="pareja">
+                    <img src="./img/imgTarot7.avif" alt="Imagen 3">
+                    <img src="./img/imgTarot7.avif" alt="Imagen 4">
+                </div>
+                <!-- Agrega más pares de imágenes según sea necesario -->
             </div>
         </section>
 
