--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="foto">
-                <img src="img/centaura.png" alt="">
+                <img src="" alt="">
             </div>
         </div>
     </section>
