--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="contenido-seccion">
             <header>
                 <div class="nav-bar" onclick="mostrarOcultarMenu()">
-                    <i class="fa-solid fa-hat-wizard"></i>
+                    <i class="fa-solid fa-bars"></i>
                 </div>
                 <nav id="nav" class="nav">
                     <a href="#inicio">Inicio</a>
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="foto">
-                <img src="" alt="">
+                <img src="./img/Fotologo.png" alt="">
             </div>
         </div>
     </section>
@@ -99,23 +99,32 @@
                 <p class="especial">💖Meditaciones guiadas</p>     
                 <p class="especial">🧘🏻Sesiones de acompañamiento en momentos de crisis 💫</p>
                 </div>
-                <div class="fila">
-                    <div class="col">
-                        <i class="fa-solid fa-diamond"></i>
-                        <span class="titulo-detalle">Tarot Holistico Predictivo🧞</span>
-                        <p>El tarot holístico tiende a considerar todos los aspectos de la vida, y combina la intuición con la interpretación de las cartas para ofrecer una visión más completa. Si se usa de manera positiva, puede ser una herramienta reflexiva.  </p>
-                    </div>
-                    <div class="col">
-                        <i class="fa-solid fa-diamond"></i>
-                        <span class="titulo-detalle">Reiki🙌✨</span>
-                        <p>El Reiki es una práctica japonesa de sanación mediante la imposición de manos. Muchas personas encuentran beneficios de relajación y bienestar a través de sesiones de Reiki.</p>
-                    </div>
-                    <div class="col">
-                        <i class="fa-solid fa-diamond"></i>
-                        <span class="titulo-detalle">Rito Sagrado, Sanación del Útero 💖</span>
-                        <p>Este rito parece estar centrado en la conexión con la energía femenina y la sanación del útero. Puede ser una práctica profunda y significativa para quienes buscan conectarse con su feminidad y explorar la sanación a un nivel más profundo.</p>
+            <div class="wrap">
+                <div class="tarjeta-wrap"><h4>titulo foto</h4>
+                    <div class="tarjeta">
+                        <div class="adelante card1"></div>
+                        <div class="atras">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi exercitationem maiores modi dignissimos, iste officiis aut sequi at rem ea! Porro sit animi perspiciatis explicabo veritatis dolores? Nulla, vero libero.</p>
+                        </div>
                     </div>
                 </div>
+                <div class="tarjeta-wrap"><h4>titulo foto</h4>
+                    <div class="tarjeta">
+                        <div class="adelante card1"></div>
+                        <div class="atras">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi exercitationem maiores modi dignissimos, iste officiis aut sequi at rem ea! Porro sit animi perspiciatis explicabo veritatis dolores? Nulla, vero libero.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="tarjeta-wrap"><h4>titulo foto</h4>
+                    <div class="tarjeta">
+                        <div class="adelante card1"></div>
+                        <div class="atras">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi exercitationem maiores modi dignissimos, iste officiis aut sequi at rem ea! Porro sit animi perspiciatis explicabo veritatis dolores? Nulla, vero libero.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             </div>
     </section>
 
@@ -124,18 +133,7 @@
     <section class="galeriaFondo">
     </section>
 
-    <section class="galeriaFotos">
-        <div class="galeria">
-            <div class="pareja">
-                <img src="./img/imgTarot7.avif" alt="Imagen 1">
-                <img src="./img/imgTarot7.avif" alt="Imagen 2">
-            </div>
-            <div class="pareja">
-                <img src="./img/imgTarot7.avif" alt="Imagen 3">
-                <img src="./img/imgTarot7.avif" alt="Imagen 4">
-            </div>
-                <!-- Agrega más pares de imágenes según sea necesario -->
-        </div>
+    
     </section>
 
     <!-- SECCION CONTACTO-->
