--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <!-- Navbar con logo -->
 <body>
-
+    <!--Seccion header-->
+    <header class="header">
+        <div class="foto-header">
+            <img src="./img/Fotologo.png" alt="">
+        </div>
+    </header>
     <!--Seccion inicio-->
     <section class="inicio" id="inicio">
         <div class="contenido-seccion">
@@ -33,9 +38,6 @@
                 <div class="redes">
                     <a href="https://www.instagram.com/tarot_centaura/"><i class="fa-brands fa-instagram"></i></a>
                 </div>
-            </div>
-            <div class="foto">
-                <img src="./img/Fotologo.png" alt="">
             </div>
         </div>
     </section>
