se modifico header

--- a/index.html
+++ b/index.html
@@ -41,8 +41,34 @@
             </div>
         </div>
     </section>
+    <!--Seccion inicio 2-->
+    <section class="inicio2" id="inicio2">
+        <div class="contenido-seccion2">
+            <header>
+                <div class="nav-bar2" onclick="mostrarOcultarMenu()">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+                <nav id="nav2" class="nav2">
+                    <a href="#inicio2">Inicio</a>
+                    <a href="#sobremi2">Mi Camino</a>
+                    <a href="#habilidades2">Servicios</a>
+                    <a href="#contacto2">Contacto</a>
+                </nav>
+                <div class="logo2">
+                    C<span class="color2">N</span>
+                </div>
+            </header>
+            <div class="info2">
+                <h1>TAROT CENTAURA</h1>
+                <h2>Tarot holistico, predictivo, Reiki, Meditacion guiada</h2>
+                <div class="redes2">
+                    <a href="https://www.instagram.com/tarot_centaura/"><i class="fa-brands fa-instagram"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
     <!--SECCION ELEGI ESTE CAMINO-->
-        
+
     <section class="sobremicamino" id="sobremi">
             <div class="contenido-seccion2">
                 <h3 class="titulo-seccion">Por que elegi este camino?</h3>
