se modifico algo

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section class="inicio2" id="inicio2">
         <div class="contenido-seccion2">
             <header>
-                <div class="nav-bar2" onclick="mostrarOcultarMenu()">
+                <div class="nav-bar2" onclick="mostrarOcultarMenu2()">
                     <i class="fa-solid fa-bars"></i>
                 </div>
                 <nav id="nav2" class="nav2">
