--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                     <i class="fa-solid fa-bars"></i>
                 </div>
                 <nav id="nav2" class="nav2">
-                    <a href="#inicio2">Inicio</a>
-                    <a href="#sobremi2">Mi Camino</a>
-                    <a href="#habilidades2">Servicios</a>
-                    <a href="#contacto2">Contacto</a>
+                    <a href="#inicio">Inicio</a>
+                    <a href="#sobremi">Mi Camino</a>
+                    <a href="#habilidades">Servicios</a>
+                    <a href="#contacto">Contacto</a>
                 </nav>
                 <div class="logo2">
                     C<span class="color2">N</span>
