--- a/index.html
+++ b/index.html
@@ -209,7 +209,9 @@
     <script src="index.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
-        AOS.init();
+        AOS.init({
+            duration: 1000
+        });
     </script>
 </body>
 </html>
