--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     C<span class="color">N</span>
                 </div>
             </header>
-            <div class="info">
+            <div data-aos="fade-down" class="info">
                 <h1>TAROT CENTAURA</h1>
                 <h2>Tarot holistico, predictivo, Reiki, Meditacion guiada</h2>
                 <div class="redes">
@@ -61,7 +61,7 @@
                     C<span class="color2">N</span>
                 </div>
             </header>
-            <div class="info2">
+            <div data-aos="fade-down" class="info2">
                 <h1>TAROT CENTAURA</h1>
                 <h2>Tarot holistico, predictivo, Reiki, Meditacion guiada</h2>
                 <div class="redes2">
@@ -210,7 +210,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init({
-            duration: 1000
+            duration: 1000,
         });
     </script>
 </body>
