--- a/index.html
+++ b/index.html
@@ -170,6 +170,28 @@
     <section class="galeriaFondo">
     </section>
 
+    <!--FORMULARIO-->
+
+    <section class="formu">
+        <div id="formulario">
+            <form action="">
+                <label>Nombre:</label>
+                <input type="text" class="campo" id="tfNombre"><br/>
+
+                <label>Correo:</label>
+                <input type="text" class="campo" id="tfCorreo"><br/>
+
+                <label>Consulta</label>
+                <input type="text" class="campo" id="tfConsulta"><br/>
+
+                <label>Mensaje</label>
+                <textarea  id="tfMensaje" cols="30" rows="10"></textarea>
+
+                <input type="submit" value="Enviar">
+            </form>
+        </div>
+    </section>
+
     <!-- SECCION CONTACTO-->
     <section class="contacto" id="contacto">
         <div class="contenido-seccion">
