se modifico form

--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
     <section class="formu">
         <div id="formulario">
             <form action="">
-                <label>Nombre:</label>
+                <label>Nombre</label>
                 <input type="text" class="campo" id="tfNombre"><br/>
 
-                <label>Correo:</label>
+                <label>Correo</label>
                 <input type="text" class="campo" id="tfCorreo"><br/>
 
                 <label>Consulta</label>
