se modifico foto

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                 <img src="./img/IMG_20210815_004253070.jpg" alt="">
             </div>
             <div class="textoCamino">
+                <h2 class="titulo-camino">Por que elegi este camino</h2>
                 <h4 class="h4Texto">
                     <p class="especial2-1">
                     ABRI ESTE ESPACIO PARA CONTAR TAN SOLO, UNA PEQUEÑA PARTE DE MIS EXPERIENCIAS EN EL PASO DE ESTA VIDA, PARA PODER HACER SENTIR ACOMPAÑADAS A TODAS LAS PERSONAS QUE ASI LO SIENTAN...</p>
