se modificaron los servicios

--- a/index.html
+++ b/index.html
@@ -132,15 +132,9 @@
             <div class="contenido-seccion">
                 <h3 class="titulo-seccion">Mis Servicios</h3>
                 <div class="titulo-seccion-servicios">
-                <p class="especial">🧞Tarot holístico, predictivo </p>
-                <p class="especial">🙌Reiki</p>     
-                <p class="especial">✨Rito sagrado, sanación del útero</p>     
-                <p class="especial">💖Meditaciones guiadas</p>     
-                <p class="especial">🧘🏻Sesiones de acompañamiento en momentos de crisis 💫</p>
-                <p class="especial">Registros Akashicos</p>
             </div>
             <div class="wrap">
-                <div class="tarjeta-wrap"><h4>titulo foto</h4>
+                <div class="tarjeta-wrap"><h4>Tarot holístico, predictivo</h4>
                     <div class="tarjeta">
                         <div class="adelante card1"></div>
                         <div class="atras">
@@ -148,7 +142,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="tarjeta-wrap"><h4>titulo foto</h4>
+                <div class="tarjeta-wrap"><h4>Reiki</h4>
                     <div class="tarjeta">
                         <div class="adelante card1"></div>
                         <div class="atras">
@@ -156,7 +150,23 @@
                         </div>
                     </div>
                 </div>
-                <div class="tarjeta-wrap"><h4>titulo foto</h4>
+                <div class="tarjeta-wrap"><h4>Meditaciones guiadas</h4>
+                    <div class="tarjeta">
+                        <div class="adelante card1"></div>
+                        <div class="atras">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi exercitationem maiores modi dignissimos, iste officiis aut sequi at rem ea! Porro sit animi perspiciatis explicabo veritatis dolores? Nulla, vero libero.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="tarjeta-wrap"><h4>Sesiones de acompañamiento en momentos de crisis</h4>
+                    <div class="tarjeta">
+                        <div class="adelante card1"></div>
+                        <div class="atras">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi exercitationem maiores modi dignissimos, iste officiis aut sequi at rem ea! Porro sit animi perspiciatis explicabo veritatis dolores? Nulla, vero libero.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="tarjeta-wrap"><h4>Registros Akashicos</h4>
                     <div class="tarjeta">
                         <div class="adelante card1"></div>
                         <div class="atras">
