se modificaron navbar

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </header>
             <div data-aos="fade-down" class="info">
                 <h1>TAROT CENTAURA</h1>
-                <h2>Tarot holistico, predictivo, Reiki, Meditacion guiada, Registros Akashicos</h2>
+                <h2>Tarot, Reiki, Meditacion guiada, Registros Akashicos, Rito Sagrado sanacion del utero</h2>
                 <div class="redes">
                     <a href="https://www.instagram.com/tarot_centaura/"><i class="fa-brands fa-instagram"></i></a>
                 </div>
@@ -63,7 +63,7 @@
             </header>
             <div data-aos="fade-down" class="info2">
                 <h1>TAROT CENTAURA</h1>
-                <h2>Tarot holistico, predictivo, Reiki, Meditacion guiada, Registros Akashicos </h2>
+                <h2>Tarot, Reiki, Meditacion guiada, Registros Akashicos, Rito Sagrado sanacion del utero </h2>
                 <div class="redes2">
                     <a href="https://www.instagram.com/tarot_centaura/"><i class="fa-brands fa-instagram"></i></a>
                 </div>
@@ -134,7 +134,7 @@
                 <div class="titulo-seccion-servicios">
             </div>
             <div class="wrap">
-                <div class="tarjeta-wrap"><h4>Tarot holístico, predictivo</h4>
+                <div class="tarjeta-wrap"><h4>Tarot</h4>
                     <div class="tarjeta">
                         <div class="adelante card1"></div>
                         <div class="atras">
@@ -174,6 +174,14 @@
                         </div>
                     </div>
                 </div>
+                <div class="tarjeta-wrap"><h4>Rito Sagrado, Sanacion del utero</h4>
+                    <div class="tarjeta">
+                        <div class="adelante card1"></div>
+                        <div class="atras">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi exercitationem maiores modi dignissimos, iste officiis aut sequi at rem ea! Porro sit animi perspiciatis explicabo veritatis dolores? Nulla, vero libero.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
     </section>
 
@@ -203,16 +211,31 @@
         </div>
     </section>
 
+    <!--VIDEOS YOUTUVE-->
+
+
     <!-- SECCION CONTACTO-->
     <section class="contacto" id="contacto">
         <div class="contenido-seccion">
             <h2 class="titulo-seccion">Redes sociales</h2>
-            <h3>Seguime en Instagram</h3>
+            <h3>Seguime en mis Redes Sociales</h3>
 
             <div class="div-instagram">
                 <div class="instagram">
                     <h2>
+                        <a href="https://www.tiktok.com/@xuxa.love"><i class="fa-brands fa-tiktok"></i></a>
+                    </h2>
+                    <span class="info-contacto"></span>
+                </div>
+                <div class="instagram">
+                    <h2>
                         <a href="https://www.instagram.com/tarot_centaura/"><i class="fa-brands fa-instagram"></i></a>
+                    </h2>
+                    <span class="info-contacto"></span>
+                </div>
+                <div class="instagram">
+                    <h2>
+                        <a href="https://www.youtube.com/@XUXA_love"><i class="fa-brands fa-youtube"></i></a>
                     </h2>
                     <span class="info-contacto"></span>
                 </div>
