se modifico movimiento

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
     <!--FORMULARIO-->
 
-    <section class="formu">
+    <section data-aos="fade-up" class="formu">
         <div id="formulario">
             <form action="">
                 <label for="name">Nombre</label>
@@ -215,8 +215,9 @@
 
 
     <!-- SECCION CONTACTO-->
-    <section class="contacto" id="contacto">
-        <div class="contenido-seccion">
+    <section  class="contacto" id="contacto">
+        <div data-aos="fade-up"
+        data-aos-duration="3000" class="contenido-seccion">
             <h2 class="titulo-seccion">Redes sociales</h2>
             <h3>Seguime en mis Redes Sociales</h3>
 
