se modifico todo, s agrego pagina

--- a/index/index.html
+++ b/index/index.html
@@ -81,14 +81,16 @@
 
     <!--SECCION IMAGEN Y TEXTO-->
 
+
     <section data-aos="fade-up" class="imagen-texto" id="imagenTexto">
         <div  class="contenedor-imagen-texto">
             <div class="imagenMia">
-                <img src="./img/IMG_20210815_004253070.jpg" alt="">
+                <a href="../index2/camino.html"><i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="textoCamino">
-                <h2 class="titulo-camino">Por que elegi este camino</h2>
+                <a href="../index2/camino.html"><h2 class="titulo-camino">PORQUE ELEGI ESTE CAMINO</h2></a>
                 <h4 class="h4Texto">
+                    <!--
                     <p class="especial2-1">
                     ABRI ESTE ESPACIO PARA CONTAR TAN SOLO, UNA PEQUEÑA PARTE DE MIS EXPERIENCIAS EN EL PASO DE ESTA VIDA, PARA PODER HACER SENTIR ACOMPAÑADAS A TODAS LAS PERSONAS QUE ASI LO SIENTAN...</p>
                     <p class="especial2">Tengo casi 33 años y hace un poco más de 10 años comencé a buscar las respuestas a mis... por qué? para qué? donde? cómo? ..y algo que me cuestionaba mucho era también, de que me sirve esta experiencia? ..esta decisión, me hace feliz?. esas preguntas no me dejaban dormir de noche, (sufri de insomnio mucho tiempo).
@@ -122,11 +124,15 @@
                     <p class="especial2-3">
                         ¡.CENTAURA.!
                     </p>
-                    </h4>
+                -->
+                </h4>
+            </div>
+            <div class="imagenMia">
+                <i class="fa-solid fa-arrow-left"></i>
             </div>
         </div>
     </section>
-    
+
     <!--SECCION SOBRE MI-->
     <section data-aos="fade-up" class="sobremi" id="habilidades">
             <div class="contenido-seccion">
