se modifico imagen

--- a/index.html
+++ b/index.html
@@ -85,11 +85,12 @@
     <section data-aos="fade-up" class="imagen-texto" id="imagenTexto">
         <div  class="contenedor-imagen-texto">
             <div class="imagenMia">
-                <a href="../index2/camino.html"><i class="fa-solid fa-arrow-right"></i></a>
+                <a href="http://127.0.0.1:5500/index2/camino.html"><img src="./img/IMG_20210815_004253070.jpg" alt="" ></a>
             </div>
             <div class="textoCamino">
-                <a href="../index2/camino.html"><h2 class="titulo-camino">PORQUE ELEGI ESTE CAMINO</h2></a>
+                
                 <h4 class="h4Texto">
+                    
                     <!--
                     <p class="especial2-1">
                     ABRI ESTE ESPACIO PARA CONTAR TAN SOLO, UNA PEQUEÑA PARTE DE MIS EXPERIENCIAS EN EL PASO DE ESTA VIDA, PARA PODER HACER SENTIR ACOMPAÑADAS A TODAS LAS PERSONAS QUE ASI LO SIENTAN...</p>
@@ -126,9 +127,6 @@
                     </p>
                 -->
                 </h4>
-            </div>
-            <div class="imagenMia">
-                <i class="fa-solid fa-arrow-left"></i>
             </div>
         </div>
     </section>
