--- a/index2/camino.html
+++ b/index2/camino.html
@@ -25,6 +25,7 @@
                     <i class="fa-solid fa-bars"></i>
                 </div>
                 <nav id="nav" class="nav">
+                    <a href="https://tarotcentaura.com.ar">Pagina Principal</a>
                     <a href="#inicio">Inicio</a>
                     <a href="#sobremi">Mi Camino</a>
                     <a href="#contacto">Contacto</a>
@@ -51,6 +52,7 @@
                     <i class="fa-solid fa-bars"></i>
                 </div>
                 <nav id="nav2" class="nav2">
+                    <a href="https://tarotcentaura.com.ar">Pagina Principal</a>
                     <a href="#inicio">Inicio</a>
                     <a href="#sobremi">Mi Camino</a>
                     <a href="#contacto">Contacto</a>
