se modifico acceso a pagina secundaria

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <section data-aos="fade-up" class="imagen-texto" id="imagenTexto">
         <div  class="contenedor-imagen-texto">
             <div class="imagenMia">
-                <a href="http://127.0.0.1:5500/index2/camino.html"><img src="./img/IMG_20210815_004253070.jpg" alt="" ></a>
+                <a href="http://tarotcentaura.com.ar/index2/camino.html"><img src="./img/IMG_20210815_004253070.jpg" alt="" ></a>
             </div>
             <div class="textoCamino">
                 
