--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
 
     
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init({
