se agrego chat instagram

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <title>Tarot Centaura</title>
 </head>
 <!-- Navbar con logo -->
+<div id="instagram-chat">
+    <a href="https://www.instagram.com/tu_usuario_de_instagram" target="_blank">
+        <img src="./img/instagram (1).png" alt="">
+        <p>Hablame!</p>
+    </a>
+</div>
 <body>
     <!--Seccion header-->
     <header class="header">
