--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <section data-aos="fade-up" class="imagen-texto" id="imagenTexto">
         <div  class="contenedor-imagen-texto">
             <div class="imagenMia">
-                <a href="http://tarotcentaura.com.ar/index2/camino.html"><img src="./img/IMG_20210815_004253070.jpg" alt="" ></a>
+                <a href="http://tarotcentaura.com.ar/index2/camino.html"><img src="./img/fototarjeta.jpeg" alt="" ></a>
             </div>
         </div>
     </section>
