se mofidico pagina secundaria

--- a/index2/camino.html
+++ b/index2/camino.html
@@ -9,6 +9,12 @@
     <title>Tarot Centaura</title>
 </head>
 <!-- Navbar con logo -->
+<div id="instagram-chat">
+    <a href="https://www.instagram.com/tu_usuario_de_instagram" target="_blank">
+        <img src="./img2/instagram (1).png" alt="">
+        <p>Hablame!</p>
+    </a>
+</div>
 <body>
     <!--Seccion header-->
     <header class="header">
@@ -85,7 +91,7 @@
     <section data-aos="fade-up" class="imagen-texto" id="imagenTexto">
         <div  class="contenedor-imagen-texto">
             <div class="imagenMia">
-                <img src="./img2/IMG_20210815_004253070.jpg" alt="">
+                <img src="./img2/fototarjeta.jpeg" alt="">
             </div>
             <div class="textoCamino">
                 <h2 class="titulo-camino">Por que elegi este camino</h2>
