se mofidicaron cositas

--- a/index.html
+++ b/index.html
@@ -78,15 +78,11 @@
 
     <!--SECCION ELEGI ESTE CAMINO-->
 
-    <section class="sobremicamino" id="sobremi">
-            <div class="contenido-seccion2">
-                <h3 data-aos="fade-up" class="titulo-seccion">Por que elegi este camino?</h3>
-            </div>
-    </section>
+
 
     <!--SECCION IMAGEN Y TEXTO-->
 
-
+    <h1>Haga Click En La Imagen</h1>
     <section data-aos="fade-up" class="imagen-texto" id="imagenTexto">
         <div  class="contenedor-imagen-texto">
             <div class="imagenMia">
