se mofidicaron otras

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <!--SECCION IMAGEN Y TEXTO-->
 
     <h1>Haga Click En La Imagen</h1>
-    <section data-aos="fade-up" class="imagen-texto" id="imagenTexto">
+    <section data-aos="fade-up" class="imagen-texto" id="sobremi">
         <div  class="contenedor-imagen-texto">
             <div class="imagenMia">
                 <a href="http://tarotcentaura.com.ar/index2/camino.html"><img src="./img/fototarjeta.jpeg" alt="" ></a>
