se mofidicaro chat instagram

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <!-- Navbar con logo -->
 <div id="instagram-chat">
-    <a href="https://www.instagram.com/tu_usuario_de_instagram" target="_blank">
+    <a href="https://ig.me/m/tarot_centaura" target="_blank">
         <img src="./img/instagram (1).png" alt="">
         <p>Hablame!</p>
     </a>
@@ -167,18 +167,18 @@
 
     <section data-aos="fade-up" class="formu">
         <div id="formulario">
-            <form action="">
+            <form action="formulario.php" method="post">
                 <label for="name">Nombre</label>
-                <input type="text" class="campo" id="tfNombre"><br/>
+                <input type="text" class="campo" id="Nombre"><br/>
 
-                <label>Correo</label>
-                <input type="text" class="campo" id="tfCorreo"><br/>
+                <label>telefono</label>
+                <input type="text" class="campo" id="telefono"><br/>
 
-                <label>Consulta</label>
-                <input type="text" class="campo" id="tfConsulta"><br/>
+                <label>email</label>
+                <input type="text" class="campo" id="email"><br/>
 
                 <label>Mensaje</label>
-                <textarea  id="tfMensaje" cols="30" rows="10"></textarea>
+                <textarea  id="Mensaje" cols="30" rows="10"></textarea>
 
                 <input type="submit" value="Enviar">
             </form>
