--- a/index2/camino.html
+++ b/index2/camino.html
@@ -10,7 +10,7 @@
 </head>
 <!-- Navbar con logo -->
 <div id="instagram-chat">
-    <a href="https://www.instagram.com/tu_usuario_de_instagram" target="_blank">
+    <a href="https://ig.me/m/tarot_centaura" target="_blank">
         <img src="./img2/instagram (1).png" alt="">
         <p>Hablame!</p>
     </a>
