se mofidico logo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div id="instagram-chat">
     <a href="https://ig.me/m/tarot_centaura" target="_blank">
         <img src="./img/instagram (1).png" alt="">
-        <p class="hablame">Hablame!</p>
+        <p class="hablame">Hablame!!</p>
     </a>
 </div>
 <body>
