--- a/index.html
+++ b/index.html
@@ -169,20 +169,20 @@
         <div id="formulario">
             <form action="https://formsubmit.co/arielschinocca4@gmail.com" method="POST">
                 <label for="name">Nombre</label>
-                <input type="text" class="campo" name="Nombre"><br/>
+                <input type="text" class="campo" name="Nombre" required><br/>
 
                 <label>telefono</label>
-                <input type="text" class="campo" name="telefono"><br/>
+                <input type="text" class="campo" name="telefono" required><br/>
 
                 <label>email</label>
-                <input type="text" class="campo" name="email"><br/>
+                <input type="text" class="campo" name="email" required><br/>
 
                 <label>Mensaje</label>
-                <textarea  name="Mensaje" cols="30" rows="10"></textarea>
+                <textarea  name="Mensaje" cols="30" rows="10" required></textarea>
 
                 <input type="submit" value="Enviar">
 
-                <input type="hidden" name="_next" value="https://tarotcentaura.com.ar">
+                <input type="hidden" name="_next" value="https://tarotcentaura.com.ar/">
                 <input type="hidden" name="_captcha" value="false">
             </form>
         </div>
