se agrego pagina gracias

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <input type="text" class="campo" name="telefono" required><br/>
 
                 <label>email</label>
-                <input type="text" class="campo" name="email" required><br/>
+                <input type="email" class="campo" name="email" required><br/>
 
                 <label>Mensaje</label>
                 <textarea  name="Mensaje" cols="30" rows="10" required></textarea>
