se agrego pagina

--- a/index.html
+++ b/index.html
@@ -169,16 +169,16 @@
         <div id="formulario">
             <form action="https://formsubmit.co/arielschinocca4@gmail.com" method="POST">
                 <label for="name">Nombre</label>
-                <input type="text" class="campo" name="Nombre" required><br/>
+                <input type="text" class="campo" name="Nombre" id="nombre" required><br/>
 
                 <label>telefono</label>
-                <input type="text" class="campo" name="telefono" required><br/>
+                <input type="text" class="campo" name="telefono" id="telefono" required><br/>
 
                 <label>email</label>
-                <input type="email" class="campo" name="email" required><br/>
+                <input type="email" class="campo" name="email" id="email" required><br/>
 
                 <label>Mensaje</label>
-                <textarea  name="Mensaje" cols="30" rows="10" required></textarea>
+                <textarea  name="Mensaje" cols="30" rows="10" id="mensaje" required></textarea>
 
                 <input type="submit" value="Enviar">
 
