se borro pagina gracias

--- a/index.html
+++ b/index.html
@@ -182,8 +182,9 @@
 
                 <input type="submit" value="Enviar">
 
-                <input type="hidden" name="_next" value="https://tarotcentaura.com.ar/">
+                <input type="hidden" name="_next" id="mensaje" value="https://tarotcentaura.com.ar/">
                 <input type="hidden" name="_captcha" value="false">
+                <input type="hidden" name="_autoresponse" value="Gracias por contactarme, en breve me communicare con vos">
             </form>
         </div>
     </section>
