se ordeno codigo

--- a/index.html
+++ b/index.html
@@ -76,9 +76,6 @@
         </div>
     </section>
 
-    <!--SECCION ELEGI ESTE CAMINO-->
-
-
 
     <!--SECCION IMAGEN Y TEXTO-->
 
@@ -92,11 +89,12 @@
     </section>
 
     <!--SECCION SOBRE MI-->
+
     <section data-aos="fade-up" class="sobremi" id="habilidades">
             <div class="contenido-seccion">
                 <h3 class="titulo-seccion">Mis Servicios</h3>
                 <div class="titulo-seccion-servicios">
-            </div>
+            </div> <!--Tarjetas-->
             <div class="wrap">
                 <div class="tarjeta-wrap"><h4>Tarot</h4>
                     <div class="tarjeta">
@@ -157,10 +155,6 @@
                     </div>
                 </div>
             </div>
-    </section>
-
-    <!--GALERIA DE FOTOS-->
-    <section class="galeriaFondo">
     </section>
 
     <!--FORMULARIO-->
