se modifico navbar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     </a>
 </div>
 <body>
+    <!--EFECTO LLUVIA DE NIEVE-->
     <div id="particles-js"></div>
+    
     <!--Seccion inicio-->
     <section class="inicio" id="inicio">
         <div class="contenido-seccion">
