se modificaron cositas

--- a/index2/camino.html
+++ b/index2/camino.html
@@ -33,15 +33,13 @@
                     <a href="#contacto">Contacto</a>
                 </nav>
                 <div class="logo">
-                    C<span class="color">N</span>
+                    T<span class="color">C</span>
                 </div>
             </header>
             <div data-aos="fade-down" class="info">
                 <h1>TAROT CENTAURA</h1>
                 <h2>Tarot, Reiki, Meditacion guiada, Registros Akashicos, Rito Sagrado sanacion del utero</h2>
-                <div class="redes">
-                    <a href="https://www.instagram.com/tarot_centaura/"><i class="fa-brands fa-instagram"></i></a>
-                </div>
+                <h3>Tarotista Terapeutica</h3>
             </div>
         </div>
     </section>
@@ -60,15 +58,13 @@
                     <a href="#contacto">Contacto</a>
                 </nav>
                 <div class="logo2">
-                    C<span class="color2">N</span>
+                    T<span class="color2">C</span>
                 </div>
             </header>
             <div data-aos="fade-down" class="info2">
                 <h1>TAROT CENTAURA</h1>
                 <h2>Tarot, Reiki, Meditacion guiada, Registros Akashicos, Rito Sagrado sanacion del utero </h2>
-                <div class="redes2">
-                    <a href="https://www.instagram.com/tarot_centaura/"><i class="fa-brands fa-instagram"></i></a>
-                </div>
+                <h3>Tarotista Terapeutica</h3>
             </div>
         </div>
     </section>
