se modificaron tc

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <a href="#contacto">Contacto</a>
                 </nav>
                 <div class="logo2">
-                    C<span class="color2">N</span>
+                    T<span class="color2">C</span>
                 </div>
             </header>
             <div data-aos="fade-down" class="info2">
